fixed issue with images not showing up,

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,44 +26,44 @@
     font-family: 'Syne-VariableFont_wght';
     src: url('fonts/Syne-VariableFont_wght.ttf');
 }
-
 body {
     margin: 0;
     background-color: #111827;
 }
-
-
+.container {
+    width: min(1440px, 100%);
+    padding: 12px;
+}
 .site-header {
     background-color: #1F2937;
 }
 
-.container {
-    width: min(1440px, 100%);
-    margin: 0 auto;
-}
+/* ===== nav bar ===== */
+
 .site-nav {
     min-height: 64px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
 
 .nav-left img {
-    height: 15px;
+    height: 20px;
     width: auto;
     display: block;
 }
+
 .nav-center {
     display: flex;
     align-items: center;
     gap: 16px;
+    margin-left: 24px;
 }
 
 .nav-center a {
     color: white;
     font-family: 'Syne-Bold', serif;
-    font-size: 14px;
-    padding: 5px;
+    font-size: 20px;
+    padding: 15px;
     text-decoration: none;
 }
 
@@ -80,14 +80,17 @@ body {
     display: flex;
     align-items: center;
     gap: 16px;
+    margin-left: auto;
 }
 
 .nav-right img {
-    height: 18px;
+    height: 30px;
     width: auto;
-    display: block
+    display: block;
 }
 
+
+/* ===== home page ===== */
 .hero {
     margin: 0;
 }
@@ -97,7 +100,7 @@ body {
     position: relative;
     background-image:
             linear-gradient(180deg, rgba(17, 24, 39, 0.1) 0%, rgba(17, 24, 39, 0.85) 100%),
-            url('jimmy_img.jpg');
+            url(./jimmy_hero.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -265,21 +268,26 @@ body {
     padding: 0;
 }
 
-
+/* ===== Watch page layout ===== */
 
 .watch-page .video-container {
     position: relative;
     width: 100%;
     padding-top: 56.25%;
 }
+
 .watch-page .video-container iframe {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    border: 0;
 }
 
+.watch-page .synopsis {
+    padding: 0 20px;
+}
 
 .watch-page .film-title-bar h2 {
     color: #e5e7eb;
@@ -287,14 +295,14 @@ body {
     font-size: 36px;
     text-transform: uppercase;
     margin: 0;
+    padding: 0 20px;
     }
 
 .watch-page .synopsis h2 {
     color: #e5e7eb;
-    font-family: Syne-Medium, sans-serif, sans-serif;
+    font-family: Syne-Medium, sans-serif;
     font-size: 32px;
     margin: 20px 0 8px 0;
-    text-indent: 5px;
     text-align: left;
 }
 
@@ -303,12 +311,18 @@ body {
     font-family: Inter, sans-serif;
     font-size: 16px;
     margin: 0 0 12px 0;
-    text-indent: 5px;
 }
 .watch-page .synopsis .label {
     font-family: Syne-Medium, sans-serif;
     color: #e5e7eb;
-    text-indent: 5px;
+}
+
+/* ===== forms page  layout ===== */
+
+body.form-page {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .form-page .form-container {
@@ -316,8 +330,12 @@ body {
     margin: 60px auto;
     padding: 0 20px;
     box-sizing: border-box;
+    flex: 1;
 }
 
+body.form-page .sit-title {
+    margin-top: auto;
+}
 .form-page .form-container h1 {
     color: #e5e7eb;
     font-family: Syne-ExtraBold, sans-serif;
@@ -380,10 +398,13 @@ body {
     color: white;
     border-color: #E63A2E;
 }
+body.form-page .site-footer {
+    margin-top: auto;
+}
 
+/* ===== forms page  layout ===== */
 .site-footer {
     background-color: #1F2937;
-    width: 100%;
     margin-top: 32px;
 }
 
